--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -11,15 +11,17 @@
     "edit": "編輯",
     "add": "新增",
     "search": "搜尋",
-    "close": "關閉"
+    "close": "關閉",
+    "update": "更新",
+    "submit": "提交"
   },
   "auth": {
     "welcomeBack": "歡迎回來",
-    "signIn": "登入您的帳戶",
-    "signUp": "建立您的帳戶",
+    "signIn": "登入賬戶",
+    "signUp": "注冊賬戶",
     "email": "電子郵件",
     "password": "密碼",
-    "confirmPassword": "確認密碼",
+    "confirmPassword": "密碼確認",
     "rememberMe": "記住我",
     "rememberMeInfo": "保持登入 7 天",
     "login": "登入",
@@ -31,17 +33,18 @@
     "loginNow": "立即登入"
   },
   "nav": {
+    "title": "健康監控系統",
     "home": "首頁",
-    "dataSettings": "資料設定",
-    "formatSettings": "格式設定",
+    "dataSettings": "數據設置",
+    "formatSettings": "系統設定",
     "userSettings": "使用者設定",
     "aiSupport": "AI 支援",
-    "manualSupport": "手動支援"
+    "manualSupport": "人工支援"
   },
   "home": {
     "title": "首頁",
-    "dataAnalysis": "資料分析",
-    "todayOverview": "今日概覽",
+    "dataAnalysis": "數據分析",
+    "todayOverview": "今日概括",
     "restingHeartRate": "靜止心率",
     "maxHeartRate": "最大心率",
     "minHeartRate": "最小心率",
@@ -64,8 +67,8 @@
       "category": "類別",
       "bmiRange": "BMI 範圍 (kg/m²)",
       "categories": {
-        "underweight": "體重過輕",
-        "normal": "正常體重",
+        "underweight": "過輕",
+        "normal": "正常",
         "overweight": "過重",
         "obese": "肥胖"
       }
@@ -75,11 +78,14 @@
       "loading": "載入心率資料中...",
       "noData": "暫無心率資料",
       "addData": "新增心率資料",
+      "hasData": "有資料",
+      "today": "今天",
       "bpm": "次/分",
       "average": "平均值",
       "averageBpm": "平均 次/分",
       "heartRateBpm": "心率 (次/分)"
-    }
+    },
+    "selectDate": "選擇日期"
   },
   "dataSettings": {
     "title": "資料設定",
@@ -88,10 +94,10 @@
     "loadingData": "載入現有資料中...",
     "age": "年齡",
     "enterAge": "請輸入您的年齡",
-    "height": "身高 (公分)",
-    "enterHeight": "請輸入您的身高（公分）",
-    "weight": "體重 (公斤)",
-    "enterWeight": "請輸入您的體重（公斤）",
+    "height": "身高 (公分/cm)",
+    "enterHeight": "請輸入您的身高（公分/cm）",
+    "weight": "體重 (公斤/kg)",
+    "enterWeight": "請輸入您的體重（公斤/kg）",
     "gender": "性別",
     "male": "男",
     "female": "女",
@@ -108,10 +114,40 @@
     "chooseFile": "選擇 CSV 檔案",
     "clickToUpload": "點擊上傳或拖放",
     "csvFilesOnly": "僅支援 CSV 檔案 (.csv)",
+    "processing": "處理中...",
+    "calculating": "計算中...",
+
+    "fillHeightWeight": "請填寫身高與體重",
+    "savedSuccessfully": "BMI 資料儲存成功！",
+    "updatedSuccessfully": "BMI 資料更新成功！",
+    "saveFailed": "儲存 BMI 資料失敗，請再試一次。",
+    "deleteBMIConfirm": "您確定要刪除您的 BMI 資料嗎？此操作無法復原。",
+    "bmiDeleted": "BMI 資料已刪除",
+    "deleteFailed": "刪除資料失敗，請再試一次。",
+
+    "invalidCsvSelect": "請選擇有效的 CSV 檔案",
+    "invalidCsvDrop": "請拖放有效的 CSV 檔案",
+    "noFileSelected": "未選擇檔案",
+    "uploadedSuccessfully": "上傳成功！",
+    "recordsAdded": "筆已新增",
+    "duplicatesSkipped": "筆重複被略過",
+    "totalInFile": "檔案總筆數",
+    "uploadFailed": "上傳失敗",
+    "uploadFailedTry": "上傳失敗，請再試一次。",
+    "uploading": "上傳中...",
+
+    "deleting": "刪除中...",
+    "deleteAllConfirm": "您確定要刪除所有心率紀錄嗎？此操作無法復原。",
+    "allHeartRateDeleted": "所有心率資料刪除成功！",
+
     "uploadFile": "上傳檔案",
     "deleteAllRecords": "刪除所有紀錄",
-    "processing": "處理中...",
-    "calculating": "計算中..."
+
+    "saving": "儲存中...",
+    "updating": "更新中...",
+    "save": "儲存",
+    "update": "更新",
+    "yourBMI": "您的 BMI"
   },
   "formatSettings": {
     "title": "設定",
@@ -154,6 +190,10 @@
     "confirmPasswordPlaceholder": "請確認您的新密碼",
     "updatePassword": "更新密碼",
     "deleteAccount": "刪除帳戶",
+    "deleteAccountDownloadData": "在刪除帳戶之前，請下載您希望保留的任何資料或資訊。",
+    "deleteAccountWarning": "帳戶刪除後，將無法復原。",
+    "enterPasswordToConfirmDeletion": "輸入您的密碼以確認刪除",
+    "confirmDelete": "確認刪除",
     "deleteAccountDesc": "帳戶刪除後，其所有資源和資料將被永久刪除。",
     "deleteAccountButton": "刪除帳戶"
   },
@@ -179,10 +219,59 @@
     "hide": "隱藏",
     "show": "顯示",
     "noPastConversations": "暫無歷史對話。",
-    "newConversation": "新對話"
+    "settingsDescription": "調整模型行為和回應風格",
+    "newConversation": "新對話",
+    "sending": "傳送中...",
+    "reset": "重設",
+    "done": "完成",
+    "yesDelete": "是，刪除",
+    "attachFile": "附加檔案",
+    "sources": "來源：",
+    "temperature": "溫度",
+    "temperatureDesc": "控制隨機性。較低 = 更確定，較高 = 更具創造力。",
+    "maxSources": "最大來源數",
+    "maxSourcesDesc": "限制 AI 使用的外部來源數（0 = 不使用）。",
+    "maxTokens": "最大代幣數",
+    "maxTokensDesc": "限制模型每次請求使用的代幣數（建議）。",
+    "topP": "Top-p",
+    "topPDesc": "替代採樣參數（與溫度互補）。",
+    "deleteConversationConfirm": "刪除此對話？此操作無法復原。",
+    "sendFailed": "傳送失敗。請再試一次。",
+    "prompts": {
+      "bmi": {
+        "underweight": {
+          "0": "有哪些健康增重的方法？",
+          "1": "為了安全增重，我應該遵循什麼飲食？"
+        },
+        "normal": {
+          "0": "我應如何維持健康體重？",
+          "1": "根據我的 BMI，哪些運動最適合我？"
+        },
+        "overweight": {
+          "0": "有哪些有效且健康的減重策略？",
+          "1": "我該如何制定可持續的減重計劃？"
+        },
+        "obese": {
+          "0": "對於肥胖者來說，哪些運動是安全的？",
+          "1": "我該如何安全地開始減重之旅？"
+        }
+      },
+      "heartRate": {
+        "0": "我的心率趨勢表示了什麼？",
+        "1": "對我而言，什麼是健康的靜止心率？"
+      }
+    },
+    "rename": "重新命名",
+    "load": "載入",
+    "delete": "刪除",
+    "prev": "上一頁",
+    "next": "下一頁",
+    "pageLabel": "第 {p} 頁",
+    "showingPage": "顯示第 {page} 頁，共 {total} 頁",
+    "renameFailed": "重新命名失敗"
   },
   "manualSupport": {
-    "title": "手動支援",
+    "title": "人工支援",
     "contactUs": "聯絡我們",
     "faq": "常見問題"
   }
