--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -45,8 +45,10 @@
   "home": {
     "title": "首頁",
     "dataAnalysis": "數據分析",
-    "todayOverview": "今日概括",
+    "todayOverview": "今日心率概括",
+    "todayPressureOverview": "今日壓力概括",
     "restingHeartRate": "靜止心率",
+
     "maxHeartRate": "最大心率",
     "minHeartRate": "最小心率",
     "averageHeartRate": "平均心率",
@@ -67,6 +69,7 @@
       "value": "BMI 值",
       "category": "類別",
       "bmiRange": "BMI 範圍 (kg/m²)",
+      "deleteBMI": "刪除所有 BMI 紀錄",
       "categories": {
         "underweight": "過輕",
         "normal": "正常",
@@ -85,6 +88,29 @@
       "average": "平均值",
       "averageBpm": "平均 次/分",
       "heartRateBpm": "心率 (次/分)"
+    },
+    "stress": {
+      "title": "壓力指數",
+      "loading": "載入壓力資料中...",
+      "noData": "暫無壓力資料",
+      "average": "平均",
+      "stressScore": "壓力指數",
+      "unit": "分數"
+    },
+    "pressure": {
+      "title": "壓力",
+      "name": "平均壓力",
+      "emotionTitle": "壓力表情",
+      "relaxed": "放松",
+      "light": "輕度",
+      "moderate": "中度",
+      "severe": "重度",
+      "noData": "暫無壓力資料",
+      "loading": "載入壓力資料中...",
+      "scoreLabel": "分數",
+      "categoryLabel": "分類",
+      "average": "平均",
+      "dataPoints": "資料點數"
     },
     "selectDate": "選擇日期",
     "overallAnalysis": {
@@ -135,7 +161,7 @@
     "recordDate": "紀錄日期",
     "addHeartRate": "新增心率",
     "updateHeartRate": "更新心率",
-    "uploadCSV": "上傳心率資料的 CSV 檔案",
+    "uploadCSV": "上傳健康資料的 CSV 檔案（心率與壓力）",
     "uploadCSVShort": "上傳 CSV 檔案",
     "chooseFile": "選擇 CSV 檔案",
     "clickToUpload": "點擊上傳或拖放",
@@ -148,6 +174,7 @@
     "updatedSuccessfully": "BMI 資料更新成功！",
     "saveFailed": "儲存 BMI 資料失敗，請再試一次。",
     "deleteBMIConfirm": "您確定要刪除您的 BMI 資料嗎？此操作無法復原。",
+    "deleteBMI": "刪除所有 BMI 紀錄",
     "bmiDeleted": "BMI 資料已刪除",
     "deleteFailed": "刪除資料失敗，請再試一次。",
 
@@ -162,9 +189,26 @@
     "uploadFailedTry": "上傳失敗，請再試一次。",
     "uploading": "上傳中...",
 
+    "uploadStressOnly": "僅上傳壓力資料（使用 /stress/upload）",
+    "uploadedSuccessfullySummary": "上傳並處理完成",
+    "recordsParsed": "筆資料被解析",
+    "heartRateDays": "心率",
+    "stressDays": "壓力",
+    "daysInserted": "天已新增",
+    "daysUpdated": "天已更新",
+    "daysProcessed": "處理天數",
+    "deleteDateConfirm": "您確定要刪除 {date} 的資料嗎？此操作無法復原。",
+    "dateDeleted": "該日期的資料已刪除",
+    "noDates": "無可用日期",
+    "delete": "刪除",
+
     "deleting": "刪除中...",
     "deleteAllConfirm": "您確定要刪除所有心率紀錄嗎？此操作無法復原。",
     "allHeartRateDeleted": "所有心率資料刪除成功！",
+    "deleteAllHeartRateRecords": "刪除所有心率紀錄",
+    "deleteAllStressConfirm": "您確定要刪除所有壓力紀錄嗎？此操作無法復原。",
+    "allStressDeleted": "所有壓力資料刪除成功！",
+    "deleteAllStressRecords": "刪除所有壓力紀錄",
 
     "uploadFile": "上傳檔案",
     "deleteAllRecords": "刪除所有紀錄",
