Improve stress visulization

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,7 @@
     "title": "Home",
     "dataAnalysis": "Data Analysis",
     "todayOverview": "Today Heart Rate Overview",
-    "todayPressureOverview": "Today Pressure Overview",
+    "todayStressOverview": "Today Stress Overview",
     "restingHeartRate": "Resting Heart Rate",
     "maxHeartRate": "Max Heart Rate",
     "minHeartRate": "Min Heart Rate",
@@ -75,20 +75,15 @@
       "noData": "No stress data available",
       "average": "Average",
       "stressScore": "Stress Score",
-      "unit": "score"
-    },
-    "pressure": {
-      "title": "Pressure",
-      "name": "Average Pressure",
+      "unit": "score",
       "relaxed": "Relaxed",
       "light": "Light",
       "moderate": "Moderate",
       "severe": "Severe",
-      "noData": "No pressure data available",
-      "loading": "Loading pressure data...",
       "scoreLabel": "Score",
       "categoryLabel": "Category",
-      "average": "Average",
+      "max": "Max Stress",
+      "min": "Min Stress",
       "dataPoints": "Data Points"
     },
     "selectDate": "Select Date",
