--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -30,7 +30,7 @@
     "title": "首頁",
     "dataAnalysis": "數據分析",
     "todayOverview": "今日心率概括",
-    "todayPressureOverview": "今日壓力概括",
+    "todayStressOverview": "今日壓力概括",
     "restingHeartRate": "靜止心率",
 
     "maxHeartRate": "最大心率",
@@ -79,20 +79,15 @@
       "noData": "暫無壓力資料",
       "average": "平均",
       "stressScore": "壓力指數",
-      "unit": "分數"
-    },
-    "pressure": {
-      "title": "壓力",
-      "name": "平均壓力",
+      "unit": "分數",
       "relaxed": "放松",
       "light": "輕度",
       "moderate": "中度",
       "severe": "重度",
-      "noData": "暫無壓力資料",
-      "loading": "載入壓力資料中...",
       "scoreLabel": "分數",
       "categoryLabel": "分類",
-      "average": "平均",
+      "max": "最高壓力",
+      "min": "最低壓力",
       "dataPoints": "資料點數"
     },
     "selectDate": "選擇日期",
