--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -88,12 +88,19 @@
       "categoryLabel": "分類",
       "max": "最高壓力",
       "min": "最低壓力",
-      "dataPoints": "資料點數"
+      "dataPoints": "資料點數",
+      "rangeTitle": "壓力分級",
+      "range": {
+        "relaxed": "放松: 1 ~ 25",
+        "light": "輕度壓力: 26 ~ 50",
+        "moderate": "中度壓力: 51 ~ 80",
+        "severe": "重度壓力: 81 ~ 100"
+      }
     },
     "selectDate": "選擇日期",
     "overallAnalysis": {
       "title": "整體健康分析",
-      "noData": "資料不足，請新增 BMI 與心率紀錄以進行分析。",
+      "noData": "資料不足，請新增 BMI、心率與壓力紀錄以進行分析。",
       "adviceTitle": "建議事項",
       "statuses": {
         "excellent": "優良",
@@ -102,7 +109,7 @@
         "poor": "請注意"
       },
       "summary": {
-        "excellent": "依目前 BMI 與心率判斷，整體狀態良好。",
+        "excellent": "依目前 BMI、心率與壓力判斷，整體狀態良好。",
         "good": "整體狀態不錯，請繼續維持健康習慣。",
         "fair": "整體狀態普通，建議稍作生活習慣調整。",
         "poor": "指標顯示需注意，建議諮詢醫療專業人員。"
@@ -113,7 +120,9 @@
         "overweight": "考慮體重管理策略：飲食、運動與專業指導。",
         "obese": "請尋求醫療專業以擬定安全的減重計畫並進行監測。",
         "highHr": "減少壓力與刺激性物質，若心率持續偏高請就醫。",
-        "lowHr": "若低心率伴隨症狀，請儘速就醫。"
+        "lowHr": "若低心率伴隨症狀，請儘速就醫。",
+        "moderateStress": "透過放鬆技巧與規律睡眠管理壓力，如持續建議諮詢專業。",
+        "highStress": "壓力指數過高：優先採取壓力舒緩方法，必要時尋求專業協助。"
       }
     }
   },
@@ -307,6 +316,10 @@
       "heartRate": {
         "0": "我的心率趨勢表示了什麼？",
         "1": "對我而言，什麼是健康的靜止心率？"
+      },
+      "stress": {
+        "0": "我的壓力指數趨勢如何？",
+        "1": "我可以做些什麼來更好地管理壓力？"
       }
     },
     "rename": "重新命名",
