make small change in wording

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,6 +75,7 @@
       "noData": "No stress data available",
       "average": "Average",
       "stressScore": "Stress Score",
+      "stressScoreWithUnit": "Stress Score (score)",
       "unit": "score",
       "relaxed": "Relaxed",
       "light": "Light",
@@ -140,7 +141,8 @@
     "recordDate": "Record Date",
     "addHeartRate": "Add Heart Rate",
     "updateHeartRate": "Update Heart Rate",
-    "uploadCSV": "Upload CSV File for Health Data",
+    "uploadCSV": "Upload raw CSV File for Health Data",
+    "uploadCSVHelper": "Add raw CSV file of health data, the system will convert to required format after uploading",
     "uploadCSVShort": "Upload CSV File",
     "chooseFile": "Choose CSV file",
     "clickToUpload": "Click to upload or drag and drop",
