--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -79,6 +79,7 @@
       "noData": "暫無壓力資料",
       "average": "平均",
       "stressScore": "壓力指數",
+      "stressScoreWithUnit": "壓力指數 (分數)",
       "unit": "分數",
       "relaxed": "放松",
       "light": "輕度",
@@ -148,7 +149,8 @@
     "recordDate": "紀錄日期",
     "addHeartRate": "新增心率",
     "updateHeartRate": "更新心率",
-    "uploadCSV": "上傳健康資料的 CSV 檔案",
+    "uploadCSV": "上傳原始健康資料的 CSV 檔案",
+    "uploadCSVHelper": "添加包含原始健康資料的 CSV 檔案，系統會在上傳後轉換至需要的格式",
     "uploadCSVShort": "上傳 CSV 檔案",
     "chooseFile": "選擇 CSV 檔案",
     "clickToUpload": "點擊上傳或拖放",
