--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -155,6 +155,11 @@
       }
     },
     "selectDate": "選擇日期",
+    "viewingUser": "正在檢視使用者：",
+    "loadingUser": "載入使用者中...",
+    "userNotFound": "找不到該使用者",
+    "userLoadFailed": "載入使用者失敗",
+    "returnToUserManagement": "返回使用者管理",
     "overallAnalysis": {
       "title": "整體健康分析",
       "noData": "資料不足，請新增 BMI、心率與壓力紀錄以進行分析。",
